syntax = "proto3";

package scalegraph.ledger;

option elixir_module_prefix = "Scalegraph.Proto";

// Participant roles in the ecosystem
enum ParticipantRole {
  PARTICIPANT_ROLE_UNSPECIFIED = 0;
  ACCESS_PROVIDER = 1;      // e.g., ASSA ABLOY
  BANKING_PARTNER = 2;      // e.g., SEB
  ECOSYSTEM_PARTNER = 3;    // e.g., Beauty Hosting
  SUPPLIER = 4;             // e.g., Schampo etc, Clipper Oy
  EQUIPMENT_PROVIDER = 5;   // e.g., Hairgrowers United (pay-per-use)
}

// Account types
enum AccountType {
  ACCOUNT_TYPE_UNSPECIFIED = 0;
  STANDALONE = 1;
  OPERATING = 2;
  RECEIVABLES = 3;
  PAYABLES = 4;
  ESCROW = 5;
  FEES = 6;
  USAGE = 7;
}

// Participant represents an organization in the ecosystem
message Participant {
  string id = 1;
  string name = 2;
  ParticipantRole role = 3;
  int64 created_at = 4;
  map<string, string> metadata = 5;
  repeated string services = 6;  // Service identifiers this participant provides
}

// Account represents a ledger account
message Account {
  string id = 1;
  string participant_id = 2;
  AccountType account_type = 3;
  int64 balance = 4;
  int64 created_at = 5;
  map<string, string> metadata = 6;
}

// TransferEntry represents a single entry in a multi-party transaction
message TransferEntry {
  string account_id = 1;
  int64 amount = 2;  // positive = credit, negative = debit
}

// Transaction represents a completed ledger transaction
message Transaction {
  string id = 1;
  string type = 2;  // "credit", "debit", "transfer"
  repeated TransferEntry entries = 3;
  int64 timestamp = 4;
  string reference = 5;
}

// Participant Request/Response messages
message CreateParticipantRequest {
  string id = 1;
  string name = 2;
  ParticipantRole role = 3;
  map<string, string> metadata = 4;
}

message GetParticipantRequest {
  string participant_id = 1;
}

message ListParticipantsRequest {
  ParticipantRole role = 1;  // optional filter
}

message ListParticipantsResponse {
  repeated Participant participants = 1;
}

message CreateParticipantAccountRequest {
  string participant_id = 1;
  AccountType account_type = 2;
  int64 initial_balance = 3;
  map<string, string> metadata = 4;
}

message GetParticipantAccountsRequest {
  string participant_id = 1;
}

message GetParticipantAccountsResponse {
  repeated Account accounts = 1;
}

// Service management messages
message AddServiceRequest {
  string participant_id = 1;
  string service_id = 2;  // Service identifier (e.g., "access_control", "payment_processing")
}

message RemoveServiceRequest {
  string participant_id = 1;
  string service_id = 2;
}

message ListServicesRequest {
  string participant_id = 1;
}

message ListServicesResponse {
  repeated string services = 1;
}

// Account Request/Response messages
message CreateAccountRequest {
  string account_id = 1;
  int64 initial_balance = 2;
  map<string, string> metadata = 3;
}

message GetAccountRequest {
  string account_id = 1;
}

message GetBalanceRequest {
  string account_id = 1;
}

message GetBalanceResponse {
  string account_id = 1;
  int64 balance = 2;
}

message CreditRequest {
  string account_id = 1;
  int64 amount = 2;
  string reference = 3;
}

message DebitRequest {
  string account_id = 1;
  int64 amount = 2;
  string reference = 3;
}

message TransferRequest {
  repeated TransferEntry entries = 1;
  string reference = 2;
}

message ListTransactionsRequest {
  int32 limit = 1;           // Max transactions to return (default: 50)
  string account_id = 2;     // Optional: filter by account
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
}

message ErrorResponse {
  string code = 1;
  string message = 2;
}

// ============================================================================
// Business Transaction Messages
// ============================================================================

// Purchase invoice request - B2B goods delivery
message PurchaseInvoiceRequest {
  string supplier_id = 1;      // e.g., "schampo_etc"
  string buyer_id = 2;         // e.g., "salon_glamour"
  int64 amount = 3;            // Total amount in cents
  string reference = 4;        // Invoice reference, e.g., "INV-2024-001"
}

// Pay invoice request - settle a B2B invoice
message PayInvoiceRequest {
  string supplier_id = 1;
  string buyer_id = 2;
  int64 amount = 3;
  string reference = 4;        // Payment reference
}

// Access payment request - real-time micro-transaction
message AccessPaymentRequest {
  string payer_id = 1;              // Who is paying
  string access_provider_id = 2;    // e.g., "assa_abloy"
  int64 amount = 3;                 // Amount in cents
  string reference = 4;             // Optional reference
  string platform_id = 5;           // Optional platform for fees
  int64 platform_fee = 6;           // Optional platform fee in cents
}

// Create loan request - lender provides funds and records obligation
message CreateLoanRequest {
  string lender_id = 1;            // e.g., "seb"
  string borrower_id = 2;          // e.g., "salon_glamour"
  int64 amount = 3;                // Loan amount in cents
  string reference = 4;             // Loan reference, e.g., "LOAN-2024-001"
}

// Repay loan request - borrower pays back and clears obligation
message RepayLoanRequest {
  string lender_id = 1;
  string borrower_id = 2;
  int64 amount = 3;                // Repayment amount in cents
  string reference = 4;             // Repayment reference
}

// Get outstanding loans request
message GetOutstandingLoansRequest {
  string lender_id = 1;            // Lender's participant ID
}

// Get outstanding loans response
message GetOutstandingLoansResponse {
  string lender_id = 1;
  int64 total_outstanding = 2;     // Total outstanding in cents
}

// Get total debt request
message GetTotalDebtRequest {
  string borrower_id = 1;          // Borrower's participant ID
}

// Get total debt response
message GetTotalDebtResponse {
  string borrower_id = 1;
  int64 total_debt = 2;            // Total debt in cents
}

// Business transaction response
message BusinessTransactionResponse {
  string transaction_id = 1;
  string reference = 2;
  int64 amount = 3;
  int64 platform_fee = 4;           // Only for access payments with fees
  string status = 5;                // "completed", "failed"
  string message = 6;               // Human-readable result
}

// Participant service definition
service ParticipantService {
  rpc CreateParticipant(CreateParticipantRequest) returns (Participant);
  rpc GetParticipant(GetParticipantRequest) returns (Participant);
  rpc ListParticipants(ListParticipantsRequest) returns (ListParticipantsResponse);
  rpc CreateParticipantAccount(CreateParticipantAccountRequest) returns (Account);
  rpc GetParticipantAccounts(GetParticipantAccountsRequest) returns (GetParticipantAccountsResponse);
  
  // Service management
  rpc AddService(AddServiceRequest) returns (Participant);
  rpc RemoveService(RemoveServiceRequest) returns (Participant);
  rpc ListServices(ListServicesRequest) returns (ListServicesResponse);
}

// Ledger service definition
service LedgerService {
  // Account operations
  rpc CreateAccount(CreateAccountRequest) returns (Account);
  rpc GetAccount(GetAccountRequest) returns (Account);
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);

  // Transaction operations
  rpc Credit(CreditRequest) returns (Transaction);
  rpc Debit(DebitRequest) returns (Transaction);
  rpc Transfer(TransferRequest) returns (Transaction);
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
}

// Business transaction service - high-level operations
service BusinessService {
  // B2B Purchase flow
  rpc PurchaseInvoice(PurchaseInvoiceRequest) returns (BusinessTransactionResponse);
  rpc PayInvoice(PayInvoiceRequest) returns (BusinessTransactionResponse);

  // Real-time access payment
  rpc AccessPayment(AccessPaymentRequest) returns (BusinessTransactionResponse);

  // Loan management
  rpc CreateLoan(CreateLoanRequest) returns (BusinessTransactionResponse);
  rpc RepayLoan(RepayLoanRequest) returns (BusinessTransactionResponse);
  rpc GetOutstandingLoans(GetOutstandingLoansRequest) returns (GetOutstandingLoansResponse);
  rpc GetTotalDebt(GetTotalDebtRequest) returns (GetTotalDebtResponse);
}
